@@ -25,6 +25,7 @@ import org.jaudiotagger.audio.ogg.util.VorbisHeader;
 import org.jaudiotagger.logging.ErrorMessage;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.logging.Logger;
 
 /**
@@ -74,11 +75,12 @@ public class VorbisCommentReader
     /**
      * @param rawdata
      * @param isFramingBit
+     * @param path
      * @return logical representation of VorbisCommentTag
      * @throws IOException
      * @throws CannotReadException
      */
-    public VorbisCommentTag read(byte[] rawdata, boolean isFramingBit) throws IOException, CannotReadException
+    public VorbisCommentTag read(byte[] rawdata, boolean isFramingBit, Path path) throws IOException, CannotReadException
     {
 
         VorbisCommentTag tag = new VorbisCommentTag();
@@ -112,12 +114,26 @@ public class VorbisCommentReader
 
             if(commentLength> JAUDIOTAGGER_MAX_COMMENT_LENGTH)
             {
-                logger.warning(ErrorMessage.VORBIS_COMMENT_LENGTH_TOO_LARGE.getMsg(commentLength));
+                if(path!=null)
+                {
+                    logger.warning(path.toString() + ":" + ErrorMessage.VORBIS_COMMENT_LENGTH_TOO_LARGE.getMsg(commentLength));
+                }
+                else
+                {
+                    logger.warning(ErrorMessage.VORBIS_COMMENT_LENGTH_TOO_LARGE.getMsg(commentLength));
+                }
                 break;
             }
-            else if(commentLength>rawdata.length)
+            else if(commentLength>rawdata.length - pos)
             {
-                logger.warning(ErrorMessage.VORBIS_COMMENT_LENGTH_LARGE_THAN_HEADER.getMsg(commentLength,rawdata.length));
+                if(path!=null)
+                {
+                    logger.warning(path.toString() + ":" + ErrorMessage.VORBIS_COMMENT_LENGTH_LARGE_THAN_HEADER.getMsg(commentLength, rawdata.length - pos));
+                }
+                else
+                {
+                    logger.warning(ErrorMessage.VORBIS_COMMENT_LENGTH_LARGE_THAN_HEADER.getMsg(commentLength, rawdata.length));
+                }
                 break;
             }
             else
