@@ -134,3 +134,4 @@ test303.mp3, yes, 303: java.lang.NullPointerException when reading a corrupted a
 test309.m4a, no, 309: Tag edition fails for m4a file - and corrupts tag
 test308.mp3, no, 308: setId3v2PaddingWillShorten failing
 test613.m4a, no, 316: genre field set as text not number
+test317.flac, no, 317: vorbiscomment arraycopy
